--- a/참고자료.md
+++ b/참고자료.md
@@ -1,5 +1,13 @@
 <h1>참고자료들</h1>
 <ur/>
-이번 프로젝트를 진행하면서 조사했던 자료들, 참고했던 자료들을 다 모은 페이지 입니다.
+이번 프로젝트를 진행하면서 조사했던 자료들, 참고했던 자료들을 다 모아둔 페이지 입니다.
 
-<h6>기본적인 Music Reactive Led</h6>
+<h4>기본적인 Music Reactive Led</h4>
+<a href="https://www.youtube.com/watch?v=pcpxCOo_8js">
+  <img src="https://img.youtube.com/vi/pcpxCOo_8js/hqdefault.jpg" />
+</a>
+
+<h4>좀 더 발전된 형태의 Music Reactive Led</h4>
+<a href ="https://www.youtube.com/watch?v=5WP2Tjt9o2U">
+  <img src="https://img.youtube.com/vi/5WP2Tjt9o2U/hqdefault.jpg" />
+</a>
