--- a/참고자료.md
+++ b/참고자료.md
@@ -2,12 +2,50 @@
 <ur/>
 이번 프로젝트를 진행하면서 조사했던 자료들, 참고했던 자료들을 다 모아둔 페이지 입니다.
 
-<h4>기본적인 Music Reactive Led</h4>
+<h4>001. 기본적인 Music Reactive Led</h4>
 <a href="https://www.youtube.com/watch?v=pcpxCOo_8js">
   <img src="https://img.youtube.com/vi/pcpxCOo_8js/hqdefault.jpg" />
 </a>
+<br/>
 
-<h4>좀 더 발전된 형태의 Music Reactive Led</h4>
+<h4>002. 좀 더 발전된 형태의 Music Reactive Led</h4>
 <a href ="https://www.youtube.com/watch?v=5WP2Tjt9o2U">
   <img src="https://img.youtube.com/vi/5WP2Tjt9o2U/hqdefault.jpg" />
 </a>
+제일 처음의 동영상과 달리 아날로그 출력으로 제어가 구현된 모습을 볼 수 있습니다.
+</br/>
+
+<h4>003. 기본적인 분수</h4>
+<a href="https://www.youtube.com/watch?v=EP2bWPwTVN4">
+  <img src="https://img.youtube.com/vi/EP2bWPwTVN4/hqdefault.jpg" />
+</a>
+릴레이 모듈 사용한 예시입니다.
+<br/>
+
+<h4>004. 기본적인 분수2</h4>
+<a href="https://www.youtube.com/watch?v=f8tM--RBIJ8">
+  <img src="https://img.youtube.com/vi/f8tM--RBIJ8/hqdefault.jpg" />
+</a>
+마찬가지로 릴레이 모듈을 사용한 예시입니다.
+<br/>
+
+<h4>005. 대형 분수</h4>
+<a href="https://www.youtube.com/watch?v=FeiwwyLWPMo">
+  <img src="https://img.youtube.com/vi/FeiwwyLWPMo/hqdefault.jpg" />
+</a>
+실제 분수에 조명을 어떤 구조로 다는건지 구체적인 아이디어를 제공해줬습니다.
+<br/>
+
+<h4>006. 분수 제어 예시</h4>
+<a href="https://www.youtube.com/watch?v=MidndV__x-I">
+  <img src="https://img.youtube.com/vi/MidndV__x-I/hqdefault.jpg" />
+</a>
+워터펌프를 On, Off 하는 것 뿐만이 아닌 출력 전압을, 아날로그 형태로 제어하는 모습입니다. 아마도 Mosfet을 써야 될 것 같습니다. 
+<br/>
+
+<h4>007. 분수 제어 예시</h4>
+<a href="https://www.youtube.com/watch?v=exPk8KZzVXw">
+  <img src="https://img.youtube.com/vi/exPk8KZzVXw/hqdefault.jpg" />
+</a>
+워터펌프를 On, Off 하는 것 뿐만이 아닌 출력 전압을, 아날로그 형태로 제어하는 모습입니다. 아마도 Mosfet을 써야 될 것 같습니다. 
+<br/>
