--- a/참고자료.md
+++ b/참고자료.md
@@ -26,7 +26,7 @@
 <a href="https://www.youtube.com/watch?v=f8tM--RBIJ8">
   <img src="https://img.youtube.com/vi/f8tM--RBIJ8/hqdefault.jpg" />
 </a><br/>
-마찬가지로 릴레이 모듈을 사용한 예시입니다.
+마찬가지로 릴레이 모듈을 사용한 예시입니다. 회로도와 코드도 제공해줍니다.
 <br/>
 
 <h4>005. 대형 분수</h4>
