--- a/참고자료.md
+++ b/참고자료.md
@@ -52,5 +52,5 @@
 
 <h5>008. 음악 분수대 예시</h5>
 <a href ="https://www.youtube.com/watch?v=WkMJ_-g5N7Q">
-  <img src=  <img src="https://img.youtube.com/vi/WkMJ_-g5N7Q/hqdefault.jpg" />
+  <img src="https://img.youtube.com/vi/WkMJ_-g5N7Q/hqdefault.jpg" />
 </a><br/>
