--- a/사용재료들.md
+++ b/사용재료들.md
@@ -1,23 +1,11 @@
-1. 12볼트 DC 어댑터
-<a href="https://smartstore.naver.com/gaon21/products/2301167406?NaPm=ct%3Dk2mgn04g%7Cci%3Dcheckout%7Ctr%3Dppc%7Ctrx%3D%7Chk%3D6665a7075be762658e47cea266e0f17df4a28d4b">
-#</a>
-<br/>
-8500원<br/>
-
-<ur/>
-
-2. DC 잭 변환 젠더
-<a href = "https://smartstore.naver.com/gaon21/products/2654246680?NaPm=ct%3Dk2mgmytu%7Cci%3Dcheckout%7Ctr%3Dppc%7Ctrx%3D%7Chk%3D98bd49df1c4844553e02ce0c3406815058c441eb">
-#</a>
-<br/>
-2000원<br/>
-
-======
-
-3. 5~12V DC 펌프
-<a href="https://smartstore.naver.com/neato/products/288735278?NaPm=ct%3Dk2mgpw51%7Cci%3Dcheckout%7Ctr%3Dppc%7Ctrx%3D%7Chk%3Dfa280eb7e7b18284b26f88a4ef7c1bc18496c05c">
-#</a>
-<br/>
-개당 9500원<br/>
-
-======
+<ul>
+  <li>워터펌프(9500)(<a href="https://smartstore.naver.com/neato/products/288735278?NaPm=ct%3Dk2w6eywg%7Cci%3Dcheckout%7Ctr%3Dppc%7Ctrx%3D%7Chk%3D3fa2d2f1e6ac2778f29d63dc05044354bc165496">#</a>)</li>
+  <li>워터펌프(9500)</li>
+  <li>워터펌프(9500)</li>
+  <li>워터펌프(9500)</li>
+  <li>DC 12V 아답터(8500)(<a href="https://smartstore.naver.com/gaon21/products/2301167406?NaPm=ct%3Dk2w6gn3l%7Cci%3Dcheckout%7Ctr%3Dppc%7Ctrx%3D%7Chk%3D433ada9dd11ac2c0de30aba5ed65b2b6c4d75e45">#</a>)</li>
+  <li>변환잭 수컷(500)</li>
+  <li>변환잭 수컷(500)</li>
+  <li>변환잭 암컷(500)</li>
+  <li>변환잭 암컷(500)</li>
+</ul>
