--- a/사용재료들.md
+++ b/사용재료들.md
@@ -2,10 +2,10 @@
   <li>워터펌프(9500)(<a href="https://smartstore.naver.com/neato/products/288735278?NaPm=ct%3Dk2w6eywg%7Cci%3Dcheckout%7Ctr%3Dppc%7Ctrx%3D%7Chk%3D3fa2d2f1e6ac2778f29d63dc05044354bc165496">#</a>)</li>
   <li>워터펌프(9500)</li>
   <li>워터펌프(9500)</li>
-  <li>워터펌프(9500)</li>
-  <li>DC 12V 아답터(8500)(<a href="https://smartstore.naver.com/gaon21/products/2301167406?NaPm=ct%3Dk2w6gn3l%7Cci%3Dcheckout%7Ctr%3Dppc%7Ctrx%3D%7Chk%3D433ada9dd11ac2c0de30aba5ed65b2b6c4d75e45">#</a>)</li>
+  <li>워터펌프(9500)</li><br/>
+  <li>DC 12V 아답터(8500)(<a href="https://smartstore.naver.com/gaon21/products/2301167406?NaPm=ct%3Dk2w6gn3l%7Cci%3Dcheckout%7Ctr%3Dppc%7Ctrx%3D%7Chk%3D433ada9dd11ac2c0de30aba5ed65b2b6c4d75e45">#</a>)</li><br/>
+  <li>변환잭 수컷(500)(<a href="https://smartstore.naver.com/gaon21/products/2654246680?NaPm=ct%3Dk2w6j08n%7Cci%3Dcheckout%7Ctr%3Dppc%7Ctrx%3D%7Chk%3D9ada119dfd6a9cacc0419630a33c7a817b0bce2c">#</a>)</li>
   <li>변환잭 수컷(500)</li>
-  <li>변환잭 수컷(500)</li>
-  <li>변환잭 암컷(500)</li>
+  <li>변환잭 암컷(500)(<a href="https://smartstore.naver.com/gaon21/products/2654246680?NaPm=ct%3Dk2w6j08n%7Cci%3Dcheckout%7Ctr%3Dppc%7Ctrx%3D%7Chk%3D9ada119dfd6a9cacc0419630a33c7a817b0bce2c">#</a>)</li>
   <li>변환잭 암컷(500)</li>
 </ul>
