--- a/사용재료들.md
+++ b/사용재료들.md
@@ -7,5 +7,10 @@
   <li>변환잭 수컷(500)(<a href="https://smartstore.naver.com/gaon21/products/2654246680?NaPm=ct%3Dk2w6j08n%7Cci%3Dcheckout%7Ctr%3Dppc%7Ctrx%3D%7Chk%3D9ada119dfd6a9cacc0419630a33c7a817b0bce2c">#</a>)</li>
   <li>변환잭 수컷(500)</li>
   <li>변환잭 암컷(500)(<a href="https://smartstore.naver.com/gaon21/products/2654246680?NaPm=ct%3Dk2w6j08n%7Cci%3Dcheckout%7Ctr%3Dppc%7Ctrx%3D%7Chk%3D9ada119dfd6a9cacc0419630a33c7a817b0bce2c">#</a>)</li>
-  <li>변환잭 암컷(500)</li>
+  <li>변환잭 암컷(500)</li><br/>
+  <li>1채널 릴레이(970)(<a href="https://www.jenomall.com/goods/goods_view.php?inflow=naverPay&goodsNo=1000004708&NaPm=ct%3Dk2w6n8bv%7Cci%3Dcheckout%7Ctr%3Dppc%7Ctrx%3D%7Chk%3D724d85a8ba46db1505712258dcfd7d932ad73cd4">#</a>)</li>
+  <li>1채널 릴레이(970)</li>
+  <li>1채널 릴레이(970)</li>
+  <li>1채널 릴레이(970)</li>
+  <li>1채널 릴레이(970)</li>
 </ul>
