--- a/사용재료들.md
+++ b/사용재료들.md
@@ -12,5 +12,6 @@
   <li>1채널 릴레이(970)</li>
   <li>1채널 릴레이(970)</li>
   <li>1채널 릴레이(970)</li>
-  <li>1채널 릴레이(970)</li>
+  <li>1채널 릴레이(970)</li><br/>
+  <li>생각하는 사람 피규어(12430)(<a href="http://shopping.interpark.com/product/productInfo.do?prdNo=6572651748&dispNo=008001083&smid1=common_prd">#</a>)</li>
 </ul>
