--- a/사용재료들.md
+++ b/사용재료들.md
@@ -1,3 +1,7 @@
+<h1>Bill</h1>
+제품 옆의 링크(#)를 클릭하면 해당 제품을 구매한 사이트로 갈 수 있습니다. 
+영수증은 제출용으로 별첨하도록 했습니다.
+
 <ul>
   <li>워터펌프(9500)(<a href="https://smartstore.naver.com/neato/products/288735278?NaPm=ct%3Dk2w6eywg%7Cci%3Dcheckout%7Ctr%3Dppc%7Ctrx%3D%7Chk%3D3fa2d2f1e6ac2778f29d63dc05044354bc165496">#</a>)</li>
   <li>워터펌프(9500)</li>
