--- a/참고자료.md
+++ b/참고자료.md
@@ -55,9 +55,9 @@
   <img src="https://img.youtube.com/vi/WkMJ_-g5N7Q/hqdefault.jpg" />
 </a><br/>
 
-<h4>008. 기본적인 Record and Play 디바이스</h4>
+<h4>009. 기본적인 Record and Play 디바이스</h4>
 <a href ="https://create.arduino.cc/projecthub/millerman4487/simple-record-and-playback-0bffa1">
-  <img src="https://hackster.imgix.net/uploads/attachments/691882/servorecord_slIWKaoaDD.gif?auto=compress&gifq=35&w=900&h=675&fit=min&fm=jpg" />
+  <img src="https://hackster.imgix.net/uploads/attachments/691882/servorecord_slIWKaoaDD.gif?auto=compress&gifq=35&w=900&h=675&fit=min&fm=jpg" width="300" height="250" />
 </a><br/>
 아두이노로 만든 프로그래밍 가능한 디바이스의 가장 간단한 인터페이스는 eeprom을 이용한 Record and Play 였습니다. 그래서 저희 팀도 이 방식을 따르기로 했습니다. 
 <br/>
