--- a/참고자료.md
+++ b/참고자료.md
@@ -1,6 +1,7 @@
 <h1>참고자료들</h1>
 <ur/>
-이번 프로젝트를 진행하면서 조사했던 자료들, 참고했던 자료들을 다 모아둔 페이지 입니다.
+이번 프로젝트를 진행하면서 조사했던 자료들, 참고했던 자료들을 다 모아둔 페이지 입니다.<br/>
+이미지를 클릭하면 해당 링크로 이동할 수 있습니다.
 
 <h4>001. 기본적인 Music Reactive Led</h4>
 <a href="https://www.youtube.com/watch?v=pcpxCOo_8js">
@@ -57,7 +58,7 @@
 
 <h4>009. 기본적인 Record and Play 디바이스</h4>
 <a href ="https://create.arduino.cc/projecthub/millerman4487/simple-record-and-playback-0bffa1">
-  <img src="https://hackster.imgix.net/uploads/attachments/691882/servorecord_slIWKaoaDD.gif?auto=compress&gifq=35&w=900&h=675&fit=min&fm=jpg" width="300" height="250" />
+  <img src="https://hackster.imgix.net/uploads/attachments/691882/servorecord_slIWKaoaDD.gif?auto=compress&gifq=35&w=900&h=675&fit=min&fm=jpg" width="500" height="280" />
 </a><br/>
 아두이노로 만든 프로그래밍 가능한 디바이스의 가장 간단한 인터페이스는 eeprom을 이용한 Record and Play 였습니다. 그래서 저희 팀도 이 방식을 따르기로 했습니다. 
 <br/>
