--- a/사용재료들.md
+++ b/사용재료들.md
@@ -4,19 +4,23 @@
 <br/><br/>
 
 <ul>
+  <li>아두이노 우노 호환보드(5800)(<a href="https://smartstore.naver.com/ic11401/products/556957855?NaPm=ct%3Dk2y6ktis%7Cci%3Dcheckout%7Ctr%3Dsls_myc%7Ctrx%3D%7Chk%3De19bf3a45e09460dbb7600a1ec9666275f09f4fd">#</a>)</li>
+  <li>아두이노 우노 호환보드(5800)</li>
+  <li>아두이노 우노 호환보드(5800)</li><br />
   <li>워터펌프(9500)(<a href="https://smartstore.naver.com/neato/products/288735278?NaPm=ct%3Dk2w6eywg%7Cci%3Dcheckout%7Ctr%3Dppc%7Ctrx%3D%7Chk%3D3fa2d2f1e6ac2778f29d63dc05044354bc165496">#</a>)</li>
   <li>워터펌프(9500)</li>
   <li>워터펌프(9500)</li>
   <li>워터펌프(9500)</li><br/>
   <li>DC 12V 아답터(8500)(<a href="https://smartstore.naver.com/gaon21/products/2301167406?NaPm=ct%3Dk2w6gn3l%7Cci%3Dcheckout%7Ctr%3Dppc%7Ctrx%3D%7Chk%3D433ada9dd11ac2c0de30aba5ed65b2b6c4d75e45">#</a>)</li><br/>
-  <li>변환잭 수컷(500)(<a href="https://smartstore.naver.com/gaon21/products/2654246680?NaPm=ct%3Dk2w6j08n%7Cci%3Dcheckout%7Ctr%3Dppc%7Ctrx%3D%7Chk%3D9ada119dfd6a9cacc0419630a33c7a817b0bce2c">#</a>)</li>
-  <li>변환잭 수컷(500)</li>
-  <li>변환잭 암컷(500)(<a href="https://smartstore.naver.com/gaon21/products/2654246680?NaPm=ct%3Dk2w6j08n%7Cci%3Dcheckout%7Ctr%3Dppc%7Ctrx%3D%7Chk%3D9ada119dfd6a9cacc0419630a33c7a817b0bce2c">#</a>)</li>
-  <li>변환잭 암컷(500)</li><br/>
+  <li>변환잭 수(500)(<a href="https://smartstore.naver.com/gaon21/products/2654246680?NaPm=ct%3Dk2w6j08n%7Cci%3Dcheckout%7Ctr%3Dppc%7Ctrx%3D%7Chk%3D9ada119dfd6a9cacc0419630a33c7a817b0bce2c">#</a>)</li>
+  <li>변환잭 수(500)</li>
+  <li>변환잭 암(500)(<a href="https://smartstore.naver.com/gaon21/products/2654246680?NaPm=ct%3Dk2w6j08n%7Cci%3Dcheckout%7Ctr%3Dppc%7Ctrx%3D%7Chk%3D9ada119dfd6a9cacc0419630a33c7a817b0bce2c">#</a>)</li>
+  <li>변환잭 암(500)</li><br/>
   <li>1채널 릴레이(970)(<a href="https://www.jenomall.com/goods/goods_view.php?inflow=naverPay&goodsNo=1000004708&NaPm=ct%3Dk2w6n8bv%7Cci%3Dcheckout%7Ctr%3Dppc%7Ctrx%3D%7Chk%3D724d85a8ba46db1505712258dcfd7d932ad73cd4">#</a>)</li>
   <li>1채널 릴레이(970)</li>
   <li>1채널 릴레이(970)</li>
   <li>1채널 릴레이(970)</li>
   <li>1채널 릴레이(970)</li><br/>
-  <li>생각하는 사람 피규어(12430)(<a href="http://shopping.interpark.com/product/productInfo.do?prdNo=6572651748&dispNo=008001083&smid1=common_prd">#</a>)</li>
+  <li>생각하는 사람 피규어(12430)(<a href="http://shopping.interpark.com/product/productInfo.do?prdNo=6572651748&dispNo=008001083&smid1=common_prd">#</a>)</li><br/>
+  <li>택트 스위치(<a href="https://smartstore.naver.com/ic11401/products/4015040911?NaPm=ct%3Dk2y6ktys%7Cci%3Dcheckout%7Ctr%3Dsls_myc%7Ctrx%3D%7Chk%3Ddc7875092686f86995ee077ae5b94b3b38482bce">#</a>)</li>
 </ul>
