--- a/사용재료들.md
+++ b/사용재료들.md
@@ -22,5 +22,5 @@
   <li>1채널 릴레이(970)</li>
   <li>1채널 릴레이(970)</li><br/>
   <li>생각하는 사람 피규어(12430)(<a href="http://shopping.interpark.com/product/productInfo.do?prdNo=6572651748&dispNo=008001083&smid1=common_prd">#</a>)</li><br/>
-  <li>택트 스위치(<a href="https://smartstore.naver.com/ic11401/products/4015040911?NaPm=ct%3Dk2y6ktys%7Cci%3Dcheckout%7Ctr%3Dsls_myc%7Ctrx%3D%7Chk%3Ddc7875092686f86995ee077ae5b94b3b38482bce">#</a>)</li>
+  <li>택트 스위치(2200)(<a href="https://smartstore.naver.com/ic11401/products/4015040911?NaPm=ct%3Dk2y6ktys%7Cci%3Dcheckout%7Ctr%3Dsls_myc%7Ctrx%3D%7Chk%3Ddc7875092686f86995ee077ae5b94b3b38482bce">#</a>)</li>
 </ul>
