--- a/resources/html/제작과정.md
+++ b/resources/html/제작과정.md
@@ -1,1 +1,64 @@
-여기다가 경과를 기록하기.
+<h1>제작과정들</h1>
+<ur/>
+
+제작과정들을 비디오로 남겼습니다. 각 이미지를 클릭하시면 해당 비디오로 링크됩니다.
+
+<h4>001. 워터펌프에 5V 전압 입력</h4>
+<a href="https://www.youtube.com/watch?v=nlKktJ7HiuQ">
+  <img src="https://img.youtube.com/vi/nlKktJ7HiuQ/hqdefault.jpg" />
+</a>
+아두이노의 5V pin과 GND 핀을 이용하여, 아두이노 보드를 전압원 자체로써 워터펌프에 전압을 입력한 모습입니다.
+<br/>
+
+<h4>002. 워터펌프에 12V 전압 입력</h4>
+<a href ="https://www.youtube.com/watch?v=vXSvUIoARjY">
+  <img src="https://img.youtube.com/vi/vXSvUIoARjY/hqdefault.jpg" />
+</a><br/>
+외부전원을 이용하여 워터펌프에 12V의 전압을 입력하는데 성공한 모습입니다.
+</br/>
+
+<h4>003. 가정용 콘센트 전원으로 DC 12V 만들기</h4>
+<a href="https://www.youtube.com/watch?v=_U_hWA5aV3w">
+  <img src="https://img.youtube.com/vi/_U_hWA5aV3w/hqdefault.jpg" />
+</a><br/>
+가정용 220V 교류전압을 이용해서 DC 12V 직류전압을 만드는 법에 대해서 설명한 영상입니다.
+<br/>
+
+<h4>004. 워터펌프 On Off 제어</h4>
+<a href="https://www.youtube.com/watch?v=XmIMjWh-rqg">
+  <img src="https://img.youtube.com/vi/XmIMjWh-rqg/hqdefault.jpg" />
+</a><br/>
+릴레이 모듈을 이용하여 외부전원 입력을 차단, 연결을 조절하는 모습입니다.
+<br/>
+
+<h4>005. 스위치로 한개의 워터펌프 on off 제어</h4>
+<a href="https://www.youtube.com/watch?v=9sGTVnzAwkY">
+  <img src="https://img.youtube.com/vi/9sGTVnzAwkY/hqdefault.jpg" />
+</a><br/>
+스위치로 릴레이모듈을 제어할 수 있게 되었습니다.
+<br/>
+
+<h4>006. 스위치로 네개의 워터펌프 on off 제어</h4>
+<a href="https://www.youtube.com/watch?v=emaxRDbSG9g">
+  <img src="https://img.youtube.com/vi/emaxRDbSG9g/hqdefault.jpg" />
+</a><br/>
+
+<br/>
+
+<h4>007. 프로그래밍 가능한 분수대 완성 모습</h4>
+<a href="https://www.youtube.com/watch?v=wFLT80PlnDE">
+  <img src="https://img.youtube.com/vi/wFLT80PlnDE/hqdefault.jpg" />
+</a><br/>
+분수쇼 예시입니다.
+<br/>
+
+<h4>008. 음악 반응형 분수대 완성 모습</h4>
+<a href ="https://www.youtube.com/watch?v=lS8o3Cqs0Y8">
+  <img src="https://img.youtube.com/vi/lS8o3Cqs0Y8/hqdefault.jpg" />
+</a><br/>
+
+<h4>009. 기본적인 Record and Play 디바이스</h4>
+<a href ="https://create.arduino.cc/projecthub/millerman4487/simple-record-and-playback-0bffa1">
+  <img src="https://hackster.imgix.net/uploads/attachments/691882/servorecord_slIWKaoaDD.gif?auto=compress&gifq=35&w=900&h=675&fit=min&fm=jpg" width="500" height="280" />
+</a><br/>
+<br/>
