--- a/resources/html/발표.md
+++ b/resources/html/발표.md
@@ -1,6 +1,25 @@
 <h1>발표</h1>
 
 <h2>1. 외형 및 기본적인 기능 소개</h2>
+앞모습<br/>
+<img src="../images/앞모습.jpg" width="500" height="300"/>
+<br/>
+
+뒷모습<br/>
+<img src="../images/뒷모습.jpg" width="500" height="300"/>
+<br/>
+
+컨트롤러<br/>
+<img src="../images/컨트롤러.jpg" width="500" height="300"/>
+<br/>
+
+컨트롤러 - 조작 및 녹화 모드<br/>
+<img src="../images/뒷모습.jpg" width="500" height="300"/>
+<br/>
+
+컨트롤러 - <br/>
+<img src="../images/뒷모습.jpg" width="500" height="300"/>
+<br/>
 
 
 <h2>2. 첫번째 기능 소개 - 프로그래밍 가능</h2>
