--- a/resources/html/발표.md
+++ b/resources/html/발표.md
@@ -14,15 +14,18 @@
 <br/>
 
 컨트롤러 - 조작 및 녹화 모드<br/>
-<img src="../images/뒷모습.jpg" width="500" height="300"/>
+<img src="../images/컨트롤러2.jpg" width="500" height="300"/>
 <br/>
 
-컨트롤러 - <br/>
-<img src="../images/뒷모습.jpg" width="500" height="300"/>
+컨트롤러 - 재생 모드<br/>
+<img src="../images/컨트롤러3.jpg" width="500" height="300"/>
 <br/>
 
 
-<h2>2. 첫번째 기능 소개 - 프로그래밍 가능</h2>
+<h2>2. 첫번째 기능 소개 - 프로그래밍이 가능함</h2>
+
+도대체 어떤 인터페이스를 이용해야 사용자가 직접 분수의 패턴을 프로그래밍할 수 있을까?</br>
+이것이 이번 프로젝트의 가장 큰 고민 중 하나였다.
 
 
 <h2>3. 두번째 기능 소개 - 음악 반응</h3>
