--- a/resources/html/발표.md
+++ b/resources/html/발표.md
@@ -24,9 +24,18 @@
 
 <h2>2. 첫번째 기능 소개 - 프로그래밍이 가능함</h2>
 
-도대체 어떤 인터페이스를 이용해야 사용자가 직접 분수의 패턴을 프로그래밍할 수 있을까?</br>
+도대체 어떤 인터페이스를 이용해야 사용자가 직접 분수의 패턴을 프로그래밍할 수 있을까?<br>
 이것이 이번 프로젝트의 가장 큰 고민 중 하나였다.
+<br/><br/>
+이 고민에 대한 해결책으로써 제일 먼저 들었던 생각은 바로 '블록'을 이용한 것이었다.
+<img src="../images/block.png" width="500" height="300" />
+<br/>그러나 이 아이디어는 굉장히 구현하기 어렵다는 것을 몇차례의 시도 후 곧바로 알게 되었다.
 
+<br/><br/>그리고 나서 계속하여 고민을 하다가, 마침내 다음과 같은 아이디어가 떠올랐다.
+<br/><img src="../imgages/record.jpg" />
+<br/>만약 4개의 워터펌프를 각각의 버튼으로 on off 제어가 가능하다면, 그냥 그 on off 기록을 녹화한 다음에 다시 반복적으로 재생하는 기능만 구현해주면 사용자가 직접 분수의 패턴을 간단하게 프로그래밍할 수 있게 되지 않을까?
+
+<br/><br/>
 
 <h2>3. 두번째 기능 소개 - 음악 반응</h3>
 
