--- a/resources/html/발표.md
+++ b/resources/html/발표.md
@@ -32,8 +32,16 @@
 <br/>그러나 이 아이디어는 굉장히 구현하기 어렵다는 것을 몇차례의 시도 후 곧바로 알게 되었다.
 
 <br/><br/>그리고 나서 계속하여 고민을 하다가, 마침내 다음과 같은 아이디어가 떠올랐다.
-<br/><img src="../imgages/record.jpg" />
+<br/><img src="../images/record.jpg" />
 <br/>만약 4개의 워터펌프를 각각의 버튼으로 on off 제어가 가능하다면, 그냥 그 on off 기록을 녹화한 다음에 다시 반복적으로 재생하는 기능만 구현해주면 사용자가 직접 분수의 패턴을 간단하게 프로그래밍할 수 있게 되지 않을까?
+
+<br/><br/>이러한 아이디어를 이후 조사해보니, 다행히도 "Arduino Record and Play"라는 키워드로 검색하면 웹상에서의 자료가 어느정도 나왔다. 그리고 몇번의 시도 후에 실제 구현을 완료할 수 있게 되었다.
+
+<h4>007. 프로그래밍 가능한 분수대 완성 모습</h4>
+<a href="https://www.youtube.com/watch?v=wFLT80PlnDE">
+  <img src="https://img.youtube.com/vi/wFLT80PlnDE/hqdefault.jpg" />
+</a><br/>
+<br/>
 
 <br/><br/>
 
