--- a/resources/html/발표.md
+++ b/resources/html/발표.md
@@ -20,7 +20,8 @@
 컨트롤러 - 재생 모드<br/>
 <img src="../images/컨트롤러3.jpg" width="500" height="300"/>
 <br/>
-
+<br/>
+<u/>
 
 <h2>2. 첫번째 기능 소개 - 프로그래밍이 가능함</h2>
 
@@ -42,6 +43,15 @@
   <img src="https://img.youtube.com/vi/wFLT80PlnDE/hqdefault.jpg" />
 </a><br/>
 <br/>
+<br/>
+
+녹화모드 동안, 총 네가지 종류의 변수가 기록된다.
+<li>
+  <ol>어떤 워터펌프가 켜져있는지</ol>
+  <ol>그 워터펌프가 얼마나 오래 켜져있는지</ol>
+  <ol>어떤 워터펌프가 꺼져있는지</ol>
+  <ol>그 워터펌프가 얼마나 오래 꺼져있었는지</ol>
+</li>
 
 <br/><br/>
 
