--- a/resources/html/발표.md
+++ b/resources/html/발표.md
@@ -46,12 +46,12 @@
 <br/>
 
 녹화모드 동안, 총 네가지 종류의 변수가 기록된다.
-<li>
-  <ol>어떤 워터펌프가 켜져있는지</ol>
-  <ol>그 워터펌프가 얼마나 오래 켜져있는지</ol>
-  <ol>어떤 워터펌프가 꺼져있는지</ol>
-  <ol>그 워터펌프가 얼마나 오래 꺼져있었는지</ol>
-</li>
+<ol>
+  <li>어떤 워터펌프가 켜져있는지</li>
+  <li>그 워터펌프가 얼마나 오래 켜져있는지</li>
+  <li>어떤 워터펌프가 꺼져있는지</li>
+  <li>그 워터펌프가 얼마나 오래 꺼져있었는지</li>
+</ol>
 
 <br/><br/>
 
