--- a/resources/html/발표.md
+++ b/resources/html/발표.md
@@ -21,7 +21,7 @@
 <img src="../images/컨트롤러3.jpg" width="500" height="300"/>
 <br/>
 <br/>
-<u/>
+<br/>
 
 <h2>2. 첫번째 기능 소개 - 프로그래밍이 가능함</h2>
 
@@ -45,7 +45,7 @@
 <br/>
 <br/>
 
-녹화모드 동안, 총 네가지 종류의 변수가 기록된다.
+이 기능의 구현을 위해서는 녹화모드 동안, 총 네가지 종류의 변수가 기록된다.
 <ol>
   <li>어떤 워터펌프가 켜져있는지</li>
   <li>그 워터펌프가 얼마나 오래 켜져있는지</li>
@@ -53,7 +53,9 @@
   <li>그 워터펌프가 얼마나 오래 꺼져있었는지</li>
 </ol>
 
-<br/><br/>
+그리고 재생모드일 때는, 저 네가지 종류의 변수를 그대로 되풀이하며 반복적으로 재생하게 된다.
+
+<br/><br/><br/>
 
 <h2>3. 두번째 기능 소개 - 음악 반응</h3>
 
