--- a/resources/html/발표.md
+++ b/resources/html/발표.md
@@ -38,10 +38,10 @@
 
 <br/><br/>이러한 아이디어를 이후 조사해보니, 다행히도 "Arduino Record and Play"라는 키워드로 검색하면 웹상에서의 자료가 어느정도 나왔다. 그리고 몇번의 시도 후에 실제 구현을 완료할 수 있게 되었다.
 
-<h4>007. 프로그래밍 가능한 분수대 완성 모습</h4>
+프로그래밍 가능한 분수대 완성 모습
 <a href="https://www.youtube.com/watch?v=wFLT80PlnDE">
   <img src="https://img.youtube.com/vi/wFLT80PlnDE/hqdefault.jpg" />
-</a><br/>
+</a><br/>이미지 클릭하면 동영상 링크로 이동.
 <br/>
 <br/>
 
