--- a/resources/html/발표.md
+++ b/resources/html/발표.md
@@ -41,8 +41,9 @@
 프로그래밍 가능한 분수대 완성 모습
 <a href="https://www.youtube.com/watch?v=wFLT80PlnDE">
   <img src="https://img.youtube.com/vi/wFLT80PlnDE/hqdefault.jpg" />
-</a><br/>이미지 클릭하면 동영상 링크로 이동.
+</a><br/>
 <br/>
+이미지 클릭하면 동영상 링크로 이동.
 <br/>
 
 이 기능의 구현을 위해서는 녹화모드 동안, 총 네가지 종류의 변수가 기록된다.
