--- a/resources/html/제작과정.md
+++ b/resources/html/제작과정.md
@@ -49,7 +49,7 @@
 <a href="https://www.youtube.com/watch?v=wFLT80PlnDE">
   <img src="https://img.youtube.com/vi/wFLT80PlnDE/hqdefault.jpg" />
 </a><br/>
-분수쇼 예시입니다.
+Record and play 방식입니다.
 <br/>
 
 <h4>008. 음악 반응형 분수대 완성 모습</h4>
