--- a/resources/html/발표.md
+++ b/resources/html/발표.md
@@ -36,7 +36,7 @@
 <br/><img src="../images/record.jpg" />
 <br/>만약 4개의 워터펌프를 각각의 버튼으로 on off 제어가 가능하다면, 그냥 그 on off 기록을 녹화한 다음에 다시 반복적으로 재생하는 기능만 구현해주면 사용자가 직접 분수의 패턴을 간단하게 프로그래밍할 수 있게 되지 않을까?
 
-<br/><br/>이러한 아이디어를 이후 조사해보니, 다행히도 "Arduino Record and Play"라는 키워드로 검색하면 웹상에서의 자료가 어느정도 나왔다. 그리고 몇번의 시도 후에 실제 구현을 완료할 수 있게 되었다.
+<br/>이러한 아이디어를 이후 조사해보니, 다행히도 "Arduino Record and Play"라는 키워드로 검색하면 웹상에서의 자료가 어느정도 나왔다. 그리고 몇번의 시도 후에 실제 구현을 완료할 수 있게 되었다.
 
 (프로그래밍 가능한 분수대 완성 모습↓)
 <br/>
@@ -44,8 +44,7 @@
   <img src="https://img.youtube.com/vi/wFLT80PlnDE/hqdefault.jpg" />
 </a><br/>
 (이미지 클릭하면 동영상 링크로 이동.)
-<br/><br/>
-
+<br/>
 이 기능의 구현을 위해서는, 녹화모드 동안 총 네가지 종류의 변수가 기록된다.
 <ol>
   <li>어떤 워터펌프가 켜져있는지</li>
@@ -56,7 +55,7 @@
 
 그리고 재생모드일 때는, 저 네가지 종류의 변수를 그대로 되풀이하며 반복적으로 재생하게 된다.
 
-<br/><br/><br/>
+<br/>
 
 <h2>3. 두번째 기능 소개 - 음악 반응</h3>
 
