--- a/resources/html/발표.md
+++ b/resources/html/발표.md
@@ -24,8 +24,9 @@
 <br/>
 
 <h2>2. 첫번째 기능 소개 - 프로그래밍이 가능함</h2>
+우리 조의 제일 우선된 주제는 '사용자가 직접 패턴의 프로그래밍이 가능한 분수대' 였다.<br/>
 
-도대체 어떤 인터페이스를 이용해야 사용자가 직접 분수의 패턴을 프로그래밍할 수 있을까?<br>
+그렇다면 도대체 어떤 인터페이스를 이용해야 사용자가 직접 분수의 패턴을 프로그래밍할 수 있을까?<br>
 이것이 이번 프로젝트의 가장 큰 고민 중 하나였다.
 <br/>
 이 고민에 대한 해결책으로써 제일 먼저 들었던 생각은 바로 '블록'을 이용한 것이었다.
@@ -58,6 +59,8 @@
 <br/>
 
 <h2>3. 두번째 기능 소개 - 음악 반응</h3>
+
+
 
 
 <h2>4. 주요 하드웨어 요소 및 회로 설명</h2>
