--- a/resources/html/발표.md
+++ b/resources/html/발표.md
@@ -54,15 +54,33 @@
   <li>그 워터펌프가 얼마나 오래 꺼져있었는지</li>
 </ol>
 
-그리고 재생모드일 때는, 저 네가지 종류의 변수를 그대로 되풀이하며 반복적으로 재생하게 된다.
+그리고 재생모드일 때는, 저 네가지 종류의 변수를 그대로 되풀이하며 반복적으로 재생하게 된다.<br/>
+더 자세한 내용은 코드에서 설명하도록 하기로 한다.
 
+(시연 - 버튼 한개, 파도타기, 버튼 동시에 입력, 계속 출력하게 하기)
 <br/>
 
 <h2>3. 두번째 기능 소개 - 음악 반응</h3>
 
+또다른 기능도 구현하고 싶었다.<br/>
+사용자가 굳이 패턴을 직접 프로그래밍 할 필요 없이, 사용자가 좋아하는 노래를 입력해주기만 하면, 그 노래에 맞춰 자동으로 반응을 하는 분수대를 만드는 것도 좋을 것 같았다.<br/>
+그렇다면 이를 어떤 형태로 구현하면 좋을까를 고민해보니, 다음과 같은 아이디어가 떠올랐다.
+<img src="../images/spectrum.gif" width="500" height="300"/>
+<br/><br/>
+분수대가 총 네개의 워터펌프로 이루어져 있으니, 미디어 플레이어같은 프로그램에서 자주 등장하는 오디오 스펙트럼과 같이, 워터 펌프 하나당 오디오 스펙트럼 기둥 하나를 담당하게 하면 좋을 것 같다는 생각이 들었다.
 
+(음악 반응 분수대 완성 모습↓)
+<br/>
+<a href="https://www.youtube.com/watch?v=lS8o3Cqs0Y8">
+  <img src="https://img.youtube.com/vi/lS8o3Cqs0Y8/hqdefault.jpg" />
+</a><br/>
+(이미지 클릭하면 동영상 링크로 이동.)
+<br/><br/>이 기능의 구체적인 구현 방법은 이후 하드웨어 및 회로 설명, 코드 설명에서 설명하기로 한다.
 
+(시연 - 주파수 반응, 노래 반응)
 
 <h2>4. 주요 하드웨어 요소 및 회로 설명</h2>
 
 <h2>5. 코드 설명</h2>
+
+<h2>6. 맞닥뜨리게 된 문제들, 그리고 그로부터 배운 것들</h2>
