--- a/resources/html/발표.md
+++ b/resources/html/발표.md
@@ -81,6 +81,19 @@
 
 <h2>4. 주요 하드웨어 요소 및 회로 설명</h2>
 
+회로 그려서 올리기
+
+아답터와 릴레이 설명
+
+스펙트럼 분석 모듈 이미지 올리기
+
 <h2>5. 코드 설명</h2>
+
+1. 녹화 원리 설명(펌프 하나만 가지고서)
+
+2. 스펙트럼 분석 과정 그림가지고 설명.
+
+그리고 스펙트럼 대역 묶어서 워터펌프 하나에 연결시킨 것 설명
+
 
 <h2>6. 맞닥뜨리게 된 문제들, 그리고 그로부터 배운 것들</h2>
