--- a/resources/html/발표.md
+++ b/resources/html/발표.md
@@ -81,9 +81,26 @@
 
 <h2>4. 주요 하드웨어 요소 및 회로 설명</h2>
 
-회로 그려서 올리기
+<b>1.릴레이 설명</b>
 
-아답터와 릴레이 설명
+12V 짜리 워터펌프 4개를 써야 했기 때문에, 무조건 외부전원이 필요했다.<br/>
+아두이노의 5V 출력 전압은 코딩을 통해 손쉽게 On Off 제어가 가능하다. 하지만 외부전원은 그렇지가 않다.
+이를 가능하게 해주는것이 릴레이라는 부품이다.
+<img src="../images/relay.jpg" />
+<br/>이렇게 생긴 애다. 이렇게 생긴 애를 다음과 같은 구조로 회로를 구성하면,
+<img src="../images/relaycircuit.png" />
+아두이노 보드를 통해서 외부전원의 On Off 를 제어할 수 있게 된다. 원리는 단순히 전자석을 이용한 기계적인 원리라고 한다. 그래서 탁 탁 소리가 남.
+<br/><br/>
+<b>2.녹화 및 재생 회로</b>
+이번 프로젝트는 기능이 크게 두가지인 만큼, 아두이노도 두개를 써야 했다.
+첫번째 아두이노 회로는 '녹화 및 재생 기능'을 구현한 회로이다.
+<img src="../images/circuits/circuit1.png" />
+단순히 스위치를 누르면, 릴레이가 켜지는 기능은 손쉽게 구현할 수 있다.
+<b>3.음악 반응 기능</b>
+두번째 기능을 구현하기 위해서는 또다른 별도의 아두이노를 써야 했다.
+<img src="../images/circuits/circuit2.png" />
+
+
 
 스펙트럼 분석 모듈 이미지 올리기
 
