--- a/resources/html/발표.md
+++ b/resources/html/발표.md
@@ -93,13 +93,18 @@
 <br/><br/>
 <b>2.녹화 및 재생 회로</b>
 이번 프로젝트는 기능이 크게 두가지인 만큼, 아두이노도 두개를 써야 했다.
-첫번째 아두이노 회로는 '녹화 및 재생 기능'을 구현한 회로이다.
+첫번째 아두이노 회로는 '녹화 및 재생 기능'을 구현한 회로이다.<br/>
 <img src="../images/circuits/circuit1.png" width="500" height="300"/>
-단순히 스위치를 누르면, 릴레이가 켜지는 기능은 손쉽게 구현할 수 있다.
+단순히 스위치를 누르면, 릴레이가 켜지는 기능은 손쉽게 구현할 수 있다.<br/>
 <b>3.음악 반응 기능</b>
-두번째 기능을 구현하기 위해서는 또다른 별도의 아두이노를 써야 했다.
-<img src="../images/circuits/circuit2.png" widht="500" height="300" />
-여기서 새로운 부품이 필요하게 됐다. 오디오 스펙트럼을 분석해주는 쉴드가 그것이었다.
+두번째 기능을 구현하기 위해서는 또다른 별도의 아두이노를 써야 했다.<br/>
+<img src="../images/circuits/circuit2.png" widht="500" height="300" /><br/>
+여기서 새로운 부품이 필요하게 됐다. 오디오 스펙트럼을 분석해주는 쉴드가 그것이었다. 제품 링크는 여기다(<a href="https://www.sparkfun.com/products/13116">#</a>). 직구하거나 전문 수입 업체에서 구매해야된다.<br/>
+<img src="../images/circuits/spectrumShield.png" widht="500" height="300" /><br/>
+이런 모양이다. (오디오 입출력 케이블 꽂는 규격 등등 말로 설명할 것)<br/>
+이 쉴드에서 제일 핵심적인 기능을 하는 부품은 이것이다.
+<img src="../images/circuits/IC.jpg" widht="500" height="300" /><br/>
+
 
 
 
