--- a/resources/html/발표.md
+++ b/resources/html/발표.md
@@ -85,7 +85,7 @@
 
 12V 짜리 워터펌프 4개를 써야 했기 때문에, 무조건 외부전원이 필요했다.<br/>
 아두이노의 5V 출력 전압은 코딩을 통해 손쉽게 On Off 제어가 가능하다. 하지만 외부전원은 그렇지가 않다.
-이를 가능하게 해주는것이 릴레이라는 부품이다.
+이를 가능하게 해주는것이 릴레이라는 부품이다.<br/>
 <img src="../images/relay.jpg" width="300" height="300"/>
 <br/>이렇게 생긴 애다. 이렇게 생긴 애를 다음과 같은 구조로 회로를 구성하면,
 <img src="../images/relaycircuit.png" width="500" height="300"/><br/>
@@ -98,14 +98,14 @@
 단순히 스위치를 누르면, 릴레이가 켜지는 기능은 손쉽게 구현할 수 있다.<br/>
 <b>3.음악 반응 기능</b>
 두번째 기능을 구현하기 위해서는 또다른 별도의 아두이노를 써야 했다.<br/>
-<img src="../images/circuits/circuit2.png" widht="500" height="300" /><br/>
+<img src="../images/circuits/circuit2.png" width="500" height="300" /><br/>
 여기서 새로운 부품이 필요하게 됐다. 오디오 스펙트럼을 분석해주는 쉴드가 그것이었다. 제품 링크는 여기다(<a href="https://www.sparkfun.com/products/13116">#</a>). 직구하거나 전문 수입 업체에서 구매해야된다.<br/>
-<img src="../images/spectrumShield.png" widht="500" height="300" /><br/>
+<img src="../images/spectrumShield.jpg" width="500" height="300" /><br/>
 이런 모양이다. (오디오 입출력 케이블 꽂는 규격 등등 말로 설명할 것)<br/>
 이 쉴드에서 제일 핵심적인 기능을 하는 부품은 이것이다.
 <img src="../images/IC.jpg" widht="500" height="300" /><br/>
 이 부품은 입력된 오디오 신호를, 소리의 대역폭을 아래 그래프와 같이 7종류로 나눈 후 소리의 크기를 변수에 저장해준다.
-<img src="../images/circuits/Spectrum.gif" widht="500" height="300" /><br/>
+<img src="../images/Spectrum.gif" width="500" height="300" /><br/>
 
 <h2>5. 코드 설명</h2>
 
