--- a/resources/html/발표.md
+++ b/resources/html/발표.md
@@ -100,12 +100,12 @@
 두번째 기능을 구현하기 위해서는 또다른 별도의 아두이노를 써야 했다.<br/>
 <img src="../images/circuits/circuit2.png" width="400" height="400" /><br/>
 여기서 새로운 부품이 필요하게 됐다. 오디오 스펙트럼을 분석해주는 쉴드가 그것이었다. 제품 링크는 여기다(<a href="https://www.sparkfun.com/products/13116">#</a>). 직구하거나 전문 수입 업체에서 구매해야된다.<br/>
-<img src="../images/spectrumShield.jpg" width="500" height="300" /><br/>
+<img src="../images/spectrumShield.jpg" width="400" height="400" /><br/>
 이런 모양이다. (오디오 입출력 케이블 꽂는 규격 등등 말로 설명할 것)<br/>
 이 쉴드에서 제일 핵심적인 기능을 하는 부품은 이것이다.
-<img src="../images/IC.jpg" widht="500" height="300" /><br/>
+<img src="../images/IC.jpg" width="500" height="300" /><br/>
 이 부품은 입력된 오디오 신호를, 소리의 대역폭을 아래 그래프와 같이 7종류로 나눈 후 소리의 크기를 변수에 저장해준다.
-<img src="../images/spectrum.gif" width="500" height="300" /><br/>
+<img src="../images/Graph1.jpg" width="500" height="300" /><br/>
 
 <h2>5. 코드 설명</h2>
 
