--- a/resources/html/발표.md
+++ b/resources/html/발표.md
@@ -103,17 +103,20 @@
 <img src="../images/spectrumShield.jpg" width="400" height="400" /><br/>
 이런 모양이다. (오디오 입출력 케이블 꽂는 규격 등등 말로 설명할 것)<br/>
 이 쉴드에서 제일 핵심적인 기능을 하는 부품은 이것이다.
-<img src="../images/IC.jpg" width="500" height="300" /><br/>
+<img src="../images/IC.jpg" width="500" height="220" /><br/>
 이 부품은 입력된 오디오 신호를, 소리의 대역폭을 아래 그래프와 같이 7종류로 나눈 후 소리의 크기를 변수에 저장해준다.
 <img src="../images/Graph1.jpg" width="500" height="270" /><br/>
 
 <h2>5. 코드 설명</h2>
 
-1. 녹화 원리 설명(펌프 하나만 가지고서)
-
-2. 스펙트럼 분석 과정 그림가지고 설명.
-
-그리고 스펙트럼 대역 묶어서 워터펌프 하나에 연결시킨 것 설명
+1. 코드1: <a href="../code/arduino1/Record_and_Play.ino">#</a>
+<br/><br/>
+2. 코드2: <a href="../code/arduino2/spectrum.ino">#</a>
+<br/>
+(녹화 및 재생 원리 설명할 것)<br/>
+(오디오 스펙트럼이랑 워터펌프 연결시킨 구조 설명할 것)<br/>
+(참고그림)<br/>
+<img src="../images/Graph2.jpg" width="500" height="400" /><br/>
 
 
 <h2>6. 맞닥뜨리게 된 문제들, 그리고 그로부터 배운 것들</h2>
