--- a/resources/html/발표.md
+++ b/resources/html/발표.md
@@ -121,6 +121,6 @@
 
 <h2>6. 맞닥뜨리게 된 문제들, 그리고 그로부터 배운 것들</h2>
 
-다 기록하기
-
-파일 받아서 md 확장자 html 로 
+1. 고전압시 브레드보드 사용 불가 문제(병렬회로를 납땜으로 대체해야 함)<br/>
+2. 고전압 사용시 조금만 실수해도 아두이노 고장이 매우 쉽게 일어남<br/>
+3. 워터펌프를 수직으로 배치하면 물 분사가 잘 안됨
